# OpinionTradingWorkflow

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  coverage.xml  openclaw_stub.py  openclaw_ws_proxy.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pipeline.py
.github/: pull_request_template.md
config/: openclaw_tasks.yaml  settings.yaml
docs/: annotation_instructions_zh.md  architecture.mmd  beginner_tutorial_zh.md  brief_intro_zh.md  week_plan_zh.md
models/: model_dummy_majority.joblib  model_linear_svc.joblib  model_rf.joblib  tfidf_vectorizer.joblib
scripts/: README_fetch_and_enrich.md  auto_label.py  auto_label_openclaw.py  capture_ui_screenshots.ps1  capture_ui_screenshots.py  correlation_granger.py  crawl_guba_raw.py  debug_eval.py  enrich_with_webtext.py  eval_model.py  export_conflicts.py  fetch_and_enrich.py  fetch_asset.py  generate_bulk_samples.py  inspect_training.py  inspect_training_details.py  label_review_app.py  merge_labels.py  parse_gateway_html.py  prepare_bulk_training.py  prepare_combined_training.py  prepare_training.py  probe_chat.py  probe_create_gemma.py  probe_infer.py  probe_model_switch.py  probe_models.py  probe_qwen25.py  raw_sampling.py  register_realtime_task.ps1  rescore_raw_openclaw.py  restart_openclaw_deepseek.ps1  review_export.py  run_auto_label_bulk.py  run_daily_openclaw.ps1  run_demo.ps1  run_demo_openclaw.ps1  run_realtime_guard.ps1  run_training_analysis.py  run_ui.ps1  (+7 more)
tests/: conftest.py  test_ai_sentiment.py  (+12 more)
(+186 files in other folders)
