[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
version = "0.0.0"
description = "Opinion trading helper and realtime signals pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Project Authors" } ]
dependencies = [
    "pydantic==2.11.3",
    "PyYAML==6.0.2",
    "pandas==2.2.3",
    "numpy==2.2.4",
    "matplotlib==3.10.1",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "streamlit==1.38.0",
    "altair==5.5.0",
    "yfinance==0.2.54",
    "websockets>=10.0",
    "akshare==1.17.20",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
